fix issue with dark mode of uranus text inputs

--- a/src/styles/_uranus_form.scss
+++ b/src/styles/_uranus_form.scss
@@ -23,7 +23,7 @@
     font-size: 1rem;
     padding: 0.7rem 1.0rem 0.5rem 1.0rem;
     border-radius: var(--uranus-form-field-border-radius);
-    background: white;
+    background: var(--uranus-input-bg-color);
     color: var(--uranus-color);
     border: 2px solid var(--uranus-input-border-color);
   }
